Insertion des sections assignées

--- a/home.html
+++ b/home.html
@@ -33,5 +33,25 @@
             </button>
         </div>
     </header>
+
+    <!-- main -->
+    <main class="container">
+        <!-- baniére -->
+        <div class="baniere">
+            <div class="textban">
+                <h1>Simplon,<br> réseau de Fabriques <br>
+                    numériques et inclusives
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Suspendisse varius enim in eros elementum tristique.
+                </p>
+            </div>
+        </div>
+
+
+    </main>
+
+
 </body>
 </html>
