Fin des insertions des sections assignées

--- a/fabrique.html
+++ b/fabrique.html
@@ -81,11 +81,13 @@
                         reprehenderit atque fugiat?
                     </p>
                 </div>
-                <img src="Images/histo.png" alt="">
+                <img src="Images/histo.png" alt="histoire image">
+                
             </div>
         </div>
             <!-- pedagogie -->
     <section class="section__2">
+        <img src="Images/defile.png" class="img-profile">
         <h1 class="titre1">Notre pédagogie</h1>
         <div class="container__section2">
             <img src="Images/video-image.jpg" alt="video-image">
