Fin des insertions des sections assignées

--- a/home.html
+++ b/home.html
@@ -51,7 +51,63 @@
 
 
     </main>
+ <!--FOOTER-->
 
+ <footer>
+    <div class="footer">
+        <div class="footer__top">
+            <div class="footer__top__left">
+                <img src="Images/logos.png" alt="logo simplon" class="logo-footer">
+                <div class="icone-footer">
+                    <a><img src="Images/face meuve.png" alt=""></a>
+                    <a><img src="Images/twete bleu.png" alt=""></a>
+                    <a><img src="Images/instagram.png" alt="" class="icone-chane"></a>
+                    <a><img src="Images/youtube.png" alt="" class="icone-chane"></a>
+                </div>
+            </div>
+            <div class="footer__top__middle__left">
+                <h1>Voir plus</h1>
+                <nav>
+                    <a href="#">A propos</a>
+                    <a href="#">Notre histoire</a>
+                    <a href="#">Condition d'utilisation</a>
+                    <a href="#">Politique de confidentialite</a>
+                    <a href="#">FAQ</a>
+                </nav>
+            </div>
+            <div class="footer__top__middle__rigth">
+                <h1>Coordonnée</h1>
+                <address>
+            Cité Keur Goor Gi <br>
+            Dakar, Sicap, Liberté 2 <br>
+            Sénégal
+        </address>
+                <p>
+                    <span>simplon@email.com</span><br>
+                    <span>help@simplon.com</span> <br> (221) 77 456 78 90 <br> (221) 77 654 32 10
+                </p>
+            </div>
+            <div class="footer__top__right">
+                <h1>Notre Newsletter</h1>
+                <p>
+                    Souscrivez-vous a notre <br> newsletter pour ne manquer aucune <br> de nos activités.
+                </p>
+                <div class="email-footer">
+                    <input type="email" placeholder="email">
+                    <button>Joindre</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="container__footer__bottom">
+                <h2>2021 Simplon.All rigths reserved.</h2>
+                <p>Made with
+                    <img src="Images/coeur.png" alt=""> by SimplonP4
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
