--- a/home.html
+++ b/home.html
@@ -171,6 +171,86 @@
                 </div>
             </div>
         </div>
+        <h4>Decouverte</h4>
+        </section>
+        <section class="decouverte">
+            <div class="evolution">
+                <h2>DECOUVERTES</h2>
+                <p>Simplon.co est un réseau de Fabriques solidaires et inclusives qui proposent des <br>
+                    formations gratuites aux métiers techniques du numérique en France et à <br>
+                    l'étranger </p>
+              </div>
+                <div class="triple_caisse">
+                 <div class="mini_caisse">
+                    <h3>100</h3>
+                    <p>Formateurs experts</p>
+                </div>
+                 <div class="mini_caisse">
+                    <h3>385</h3>
+                    <p>Apprenant.es formé.es <br>
+                        depuis l ouverture dans le <br>
+                        pays</p>
+                </div>
+                 <div class="mini_caisse">
+                    <h3>96</h3>
+                    <p>Enfants sensibilisé.e.s au <br>
+                        numérique</p>
+                 </div>
+                </div> 
+        </section>
+        <section class="formateurs">
+            <div class="container">
+
+            </div>
+            <div class="blog">
+                <span class="actu2"> Formateurs
+                    <hr width="100">
+                </span>
+            </div>
+
+            <div class="grid-container">
+                <div class="grid-item">
+                    <div class="profil">
+                        <img src="Images/Samba.png" alt="Samba Kane">
+                    </div>
+                    <div class="next">
+                        <h3>Samba Bery KANE</h3>
+                        <hr> <b>Formateur</b> <br>
+                        <p>
+                        LoreJm ipsum dolor sit, amet
+                        consectetur aobcaecati, tempora
+                        esse distinctio consectetur eum
+                        tempore cere!.esse minus at
+                        saepe nobis distinctio
+                        consectetur eum tempore cere!.</p>
+                        <button class="bouton-formateur">voir plus</button>
+                    </div>
+                    
+                    <div class="bar i"></div>
+
+                </div>
+                <div class="grid-item">
+                    <div class="profil">
+                        <img src="Images/Samba.png" alt="Samba Kane">
+
+                    </div>
+                    <div class="next">
+                        <h3>Samba Bery KANE</h3>
+                        <hr> <b>Formateur</b> <br>
+                        <p>
+                        LoreJm ipsum dolor sit, amet
+                        consectetur aobcaecati, tempora
+                        esse distinctio consectetur eum
+                        tempore cere!.esse minus at
+                        saepe nobis distinctio
+                        consectetur eum tempore cere!.</p>
+                        <button class="bouton-formateur">voir plus</button>
+                    </div>
+                    <div class="bar i"></div>
+
+                </div>
+
+            </div>
         </section>
         <section class="section__9">
             <h1 class="title-section9">Nous Contactez</h1>
