rectification de la section formateur

--- a/home.html
+++ b/home.html
@@ -252,6 +252,29 @@
 
             </div>
         </section>
+        <section class="pthisto">
+            <h1>Les petites histoires de la communaute </h1>
+            <hr>
+            <div class="cardhisto">
+                <div class="txtcard">
+                    LoreJm ipsum dolor sit, amet 
+                        consectetur adipisicing elit. Dolor 
+                        quod eius nisi quidem velit tenetur, 
+                        quia, animi sit obcaecati, tempora 
+                        esse minus at saepe nobis distinctio 
+                        consectetur eum tempore cere!.esse 
+                        minus at saepe nobis distinctio 
+                        consectetur eum tempore cere!
+                </div>
+                <div class="imgleg">
+                    <img src="Images/samba1.png" alt="samba">
+                    <div class="txtim">
+                        <h2>Samba KANE</h2>
+                        <h5>Formateur</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section__9">
             <h1 class="title-section9">Nous Contactez</h1>
             <div class="general">
