--- a/fabrique.html
+++ b/fabrique.html
@@ -251,7 +251,7 @@
             </div>
         </div>
         <div class="profiles">
-            <img src="Images/" alt="Samba image">
+            <img src="Images/samba11.png" alt="Samba image">
             <h1>Samba Kane</h1>
             <h2>Coach</h2>
             <p>
