faire la responsive de la page fabrique

--- a/fabrique.html
+++ b/fabrique.html
@@ -30,6 +30,7 @@
             <button class="login-button">
                 <a href="#">Contact</a>
             </button>
+            <img src="Images/menu-btn.png" alt="humburger" class="menu_burger">
         </div>
     </header>
 
@@ -37,7 +38,8 @@
     <main class="container">
         <!-- baniére -->
         <div class="badiere">
-            <h1>FABRIQUE</h1>
+            <h1 class="t_fab">FABRIQUE</h1>
+            <div class="tex_h1"></div>
             <div class="fab">
                 <div class="fableft">
                     <h1>La fabrique</h1>
@@ -61,6 +63,7 @@
                         amet reprehenderi
                     </p>
                 </div>
+                <div class="espace"></div>
             </div>
         </div>
 
@@ -279,6 +282,63 @@
     </div>
     <img src="Images/defile.png" alt="" class="img-profile">
 </section>
+<!--ici la fabrique-->
+<section class="ici__la_fabrique">
+    <h1 class="h1">Ici la fabrique</h1>
+    <div class="container_ici_la_fabrique">
+        <div class="Developpementweb">
+            <h1>Développement Web</h1>
+            <p>
+                Lorem ipsum, dolor sit amet <br>
+                consectetur adipisicing elit. Maiores <br>
+                laboriosam deleniti, culpa <br>
+                perspiciatis nemo quos illum?
+            </p>
+            <img src="Images/42.png" alt="">
+        </div>
+        <div class="Developpementweb">
+            <h1>Développement Web</h1>
+            <p>
+                Lorem ipsum, dolor sit amet <br>
+                consectetur adipisicing elit. Maiores <br>
+                laboriosam deleniti, culpa <br>
+                perspiciatis nemo quos illum?
+            </p>
+            <img src="Images/42.png" alt="">
+        </div>
+        <div class="Developpementweb">
+            <h1>Développement Web</h1>
+            <p>
+                Lorem ipsum, dolor sit amet <br>
+                consectetur adipisicing elit. Maiores <br>
+                laboriosam deleniti, culpa <br>
+                perspiciatis nemo quos illum?
+            </p>
+            <img src="Images/42.png" alt="">
+        </div>
+    </div>
+</section>
+<section class="voyager">
+    <div class="container_voyager">
+        <div class="container__1">
+            <p class="p1">
+                Voyager au coeur de la fabrique
+            </p>
+            <p>
+                <strong>section animé par seckou sané</strong> <br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores <br>
+                laboriosam deleniti, culpa perspiciatis nemo quos illum? <br>
+                Inventore non totam ea, optio voluptates eveniet in sequi quasi <br>
+                dolorem molestiae saepe eaque, enim laudantium corrupti iure <br>
+                quisquam a amet reprehenderit atque fugiat?Inventore non totam <br>
+                ea, optio voluptates eveniet in sequi qu
+            </p>
+        </div>
+        <div class="container__2">
+            <img src="Images/group-simplon.jpg" alt="">
+        </div>
+    </div>
+</section>
     </main>
 
      <!--FOOTER-->
@@ -338,5 +398,14 @@
             </div>
         </div>
     </footer>
+    <!-- <script>
+        const menu_burger = document.querySelector('.menu_burger')
+        const nav_item = document.querySelector('.header__middle')
+        const header_fin = document.querySelector('.header__end')
+        menu_burger.addEventListener('click', () =>{
+            nav_item.classList.toggle('.mobille')
+            header_fin.classList.toggle('.mobille')
+        })
+    </script> -->
 </body>
 </html>
