coder section voyage fabrique et recrutement

--- a/fabrique.html
+++ b/fabrique.html
@@ -306,7 +306,7 @@
             </p>
             <img src="Images/42.png" alt="">
         </div>
-        <div class="Developpementweb">
+        <div class="Developpementweb div3">
             <h1>Développement Web</h1>
             <p>
                 Lorem ipsum, dolor sit amet <br>
@@ -321,9 +321,9 @@
 <section class="voyager">
     <div class="container_voyager">
         <div class="container__1">
-            <p class="p1">
+            <h1 class="p1">
                 Voyager au coeur de la fabrique
-            </p>
+            </h1>
             <p>
                 <strong>section animé par seckou sané</strong> <br>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores <br>
@@ -336,6 +336,152 @@
         </div>
         <div class="container__2">
             <img src="Images/group-simplon.jpg" alt="">
+        </div>
+    </div>
+</section>
+<!--Recrutement-->
+<section class="Recrutement">
+    <h1>Recrutement</h1>
+    <div class="Recrutement__container">
+        <div class="Recrutement__container__1">
+            <img src="Images/group-simplon.jpg" alt="">
+        </div>
+        <div class="Recrutement__container__2">
+            <h2>
+                Pourquoi nous rejoindre ?
+            </h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores <br>
+                laboriosam deleniti, culpa perspiciatis nemo quos illum? Inventore non <br>
+                totam ea, optio voluptates eveniet in sequi quasi dolorem molestiae saepe <br>
+                eaque, enim laudantium corrupti iure quisquam a amet reprehenderit <br>
+                atque fugiat?Inventore non totam ea, optio voluptates eveniet in sequi qu <br>
+                eaque, enim laudantium corrupti iure quisquam a amet reprehenderit <br>
+                atque fugiat?Inventore non totam ea, optio voluptates eveniet in sequi qu
+            </p>
+        </div>
+    </div>
+    <!--offre en cours-->
+    <div class="formulaire_Recrutement">
+        <div class="cart__formulaire_1">
+            <div>
+            <h3>Offres en cours</h3>
+            <hr class="hr-top">
+            </div>
+            <div class="formateur__ligne">
+                <p>Formateur référent</p>
+                <hr class="hr">
+            </div>
+            <div class="le_post">
+            <div class="resume_du_poste">
+                <p class="titre_du_poste">Résumé du poste</p>
+                <p class="p__resume">
+                    Unde temporibus <br>
+                    amet est ! Perferendis <br>
+                    sapienteanimisperiores <br>
+                    dicta maxime doloremque, <br>
+                    ue pienteautofficia <br>
+                </p>
+            </div>
+            <div class="formulaire_carte">
+                <div class="petite_carte">
+                    <p><img src="Images/cdd.png" alt="">CDD</p>
+                    <p><img src="" alt="">Plein temps</p>
+                    <p><img src="" alt="">Dakar</p>
+                    <p><img src="" alt="">XX/XY/ZZ</p>
+                </div>
+            </div>
+        </div>
+        <button class="Button__postuler">Postuler</button>
+        <hr>
+        <div class="formateur_referent">
+            <p>Formateur referent</p>
+            <img src="Images/croix.png" alt="+">
+        </div>
+        <hr>
+        <div class="formateur_referent">
+            <p>Formateur referent</p>
+            <img src="Images/croix.png" alt="+">
+        </div>
+        <hr>
+        <p class="affiche_plus">afficher plus</p>
+    </div>
+        <div class="formulaire_2">
+            <div class="nom_prenom">
+                <p>
+                    <input type="text"placeholder="Prénom*">
+                </p>
+                <p>
+                    <input type="text"placeholder="Nom*">
+                </p>
+            </div>
+            <div class="tel_mail">
+                <p>
+                    <input type="tel" placeholder="Tel*">
+                </p>
+                <p>
+                    <input type="email" placeholder="email*">
+                </p>
+            </div>
+            <p class="joindre_fichier"><img src="Images/jointure.png" alt="fichier">joindre un fichier </p>
+            <div class="messages">
+                <textarea name="messages" id="" cols="70" rows="12" placeholder="message*"></textarea>
+            </div>
+            <button class="rejoindre">
+                rejoindre
+            </button>
+            <div class="check">
+                <input type="checkbox" name="required" id="">
+            <p class="required">*this field are required</p>
+        </div>
+        </div>
+    </div>
+</section>
+<!--ils en parlent-->
+<section class="ils_en_parle">
+    <h1>Ils en parlent</h1>
+    <div class="ils_en_parles">
+        <div class="maimouna">
+            <img src="Images/3.png" alt="maimouna">
+            <h3>MAIMOUNA DIALLO</h3>
+            <div class="maimouna_text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing <br>
+                    elit. Quas voluptate eius soluta nesciunt quam aliquam <br>asperiores maxime. Amet a, corrupti <br> alias obcaecati molestias <br> temporibus nobis et sit optio similique eligendi?
+                </p>
+            </div>
+        </div>
+        <div class="thierno">
+            <img src="Images/8.png" alt="thierno">
+            <h3>THIERNO DIALLO</h3>
+            <div class="thierno_text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing <br>
+                    elit. Quas voluptate eius soluta nesciunt quam aliquam <br>asperiores maxime. Amet a, corrupti <br> alias obcaecati molestias <br> temporibus nobis et sit optio similique eligendi?
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<!--candidature-->
+<section class="candidature">
+</section>
+<section class="partenariat">
+    <h2>Nos partenaria</h2>
+    <div class="container_partenaria">
+        <div class="partenaria__row1">
+            <img src="Images/21.png" alt="partenere" class="logo_partenere">
+            <img src="Images/45.png" alt="partenere" class="logo_partenere">
+            <img src="Images/7.png" alt="partenere" class="logo_partenere">
+            <img src="Images/14.png" alt="partenere" class="logo_partenere">
+            <img src="Images/9.png" alt="partenrere" class="logo_partenere">
+        </div>
+        <div class="partenaria__row2">
+            <img src="Images/21.png" alt="partenere" class="logo_partenere">
+            <img src="Images/45.png" alt="partenere" class="logo_partenere">
+            <img src="Images/7.png" alt="partenere"  class="logo_partenere">
+            <img src="Images/14.png" alt="partenere" class="logo_partenere">
+            <img src="Images/9.png" alt="partenrere" class="logo_partenere">
         </div>
     </div>
 </section>
